fix the alignment to match wireframes

--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,10 @@ img {
   text-align: left;
 }
 
+#work h2 {
+  text-align: center;
+}
+
 #hero {
   background-color: #ffffff;
   padding: 0;
